ajustes para o mvp
